--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,10 @@ build:
 sphinx:
   configuration: conf.py
 
+formats:
+  - pdf
+  - epub
+
 python:
   install:
     - requirements: requirements.txt
